[gd_scene load_steps=13 format=4 uid="uid://cvfspdpp6bvr5"]

[ext_resource type="Script" uid="uid://26ospjdedkr5" path="res://scripts/game scenes/main_menu.gd" id="1_l4sac"]
[ext_resource type="TileSet" uid="uid://t0wnjvlc72lf" path="res://assets/tileset/TrapmoorTileset_v03.tres" id="2_xoimn"]
[ext_resource type="Texture2D" uid="uid://kux7x65fg5fn" path="res://assets/sprites/version A/title screen.png" id="3_5glds"]
[ext_resource type="Theme" uid="uid://bvcwux0exg1y0" path="res://main_theme.tres" id="3_8op64"]
[ext_resource type="PackedScene" uid="uid://baxsig0ds3i82" path="res://scenes/signs and menus/settings_screen.tscn" id="4_8op64"]
[ext_resource type="Texture2D" uid="uid://cgkpcxhdnk456" path="res://assets/sprites/version A/title screen 2.png" id="4_voopn"]
[ext_resource type="PackedScene" uid="uid://1ef0qace5vhk" path="res://scenes/signs and menus/input_settings_screen.tscn" id="5_5glds"]
[ext_resource type="FontFile" uid="uid://bhmq324p5enkl" path="res://assets/Fonts/Pixelscapes.ttf" id="5_yeh68"]

[sub_resource type="SpriteFrames" id="SpriteFrames_yeh68"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_voopn")
}, {
"duration": 1.0,
"texture": ExtResource("3_5glds")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_c1yts"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wuyya"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6lnei"]
light_mode = 1

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l4sac")

[node name="MenuBackground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AABBACcAAAAKAAAAAABCACcAAAAKAAAAAABDACcAAAAKAAAAAABEACcAAAAKAAAAAABFACcAAAAKAAAAAABGACcAAAAKAAAAAABGACYAAAAKAAAAAABHACYAAAAKAAAAAABHACUAAAAKAAAAAABHACcAAAAKAAAAAABHACQAAAAKAAAAAABGACQAAAAKAAAAAABGACUAAAAKAAAAAABFACUAAAAKAAAAAABEACYAAAAKAAAAAABDACYAAAAKAAAAAABGACMAAAAKAAAAAABEACUAAAAKAAAAAABGACIAAAAKAAAAAABHACIAAAAKAAAAAABHACMAAAAKAAAAAABFACYAAAAKAAAAAAAAACcAAAAKAAAAAAABACcAAAAKAAAAAAACACcAAAAKAAAAAAADACcAAAALAAAAAAAEACcAAAAKAAAAAAAEACYAAAAKAAAAAAADACYAAAAKAAAAAAACACYAAAAKAAAAAAABACYAAAALAAAAAAAAACYAAAAKAAAAAAAAACUAAAAKAAAAAAAAACQAAAAKAAAAAAABACUAAAAKAAAAAAACACUAAAAKAAAAAAADACUAAAAKAAAAAAAFACYAAAAKAAAAAAAFACcAAAAKAAAAAAAAACMAAAAKAAAAAAAAACgAAAAKAAAAAAABACgAAAAKAAAAAAACACgAAAAKAAAAAAADACgAAAAKAAAAAAAEACgAAAAKAAAAAAAFACgAAAAKAAAAAABBACgAAAAKAAAAAABCACgAAAAKAAAAAABDACgAAAAKAAAAAABEACgAAAAKAAAAAABFACgAAAAKAAAAAABGACgAAAAKAAAAAABHACgAAAAKAAAAAABAACgAAAAKAAAAAAA/ACgAAAAKAAAAAAA+ACgAAAAKAAAAAAA9ACgAAAAKAAAAAAA8ACgAAAAKAAAAAAA7ACgAAAAKAAAAAAA6ACgAAAAKAAAAAAA5ACgAAAAKAAAAAAA4ACgAAAAKAAAAAAA3ACgAAAAKAAAAAAAAACIAAAAKAAAAAAABACIAAAAKAAAAAAABACMAAAAKAAAAAAABACQAAAAKAAAAAAACACIAAAAKAAAAAAACACMAAAAKAAAAAAACACQAAAALAAAAAAADACIAAAAKAAAAAAADACMAAAAKAAAAAAADACQAAAAKAAAAAAAEACIAAAAKAAAAAAAEACMAAAAKAAAAAAAEACQAAAAKAAAAAAAEACUAAAAKAAAAAAAFACIAAAAKAAAAAAAFACMAAAAKAAAAAAAFACQAAAALAAEAAAAFACUAAAALAAAAAAAGACIAAAAKAAEAAAAGACMAAAAKAAAAAAAGACQAAAAKAAAAAAAGACUAAAAKAAAAAAAGACYAAAAKAAAAAAAGACcAAAAKAAAAAAAGACgAAAAKAAAAAAAHACIAAAAKAAAAAAAHACMAAAAKAAAAAAAHACQAAAAKAAAAAAAHACUAAAAKAAAAAAAHACYAAAAKAAAAAAAHACcAAAAKAAAAAAAHACgAAAAKAAAAAAAIACIAAAAKAAAAAAAIACMAAAAKAAAAAAAIACQAAAAKAAAAAAAIACUAAAAKAAAAAAAIACYAAAAKAAAAAAAIACcAAAAKAAAAAAAIACgAAAAKAAAAAAAJACIAAAAKAAAAAAAJACMAAAAKAAAAAAAJACQAAAALAAAAAAAJACUAAAAKAAAAAAAJACYAAAALAAEAAAAJACcAAAAKAAAAAAAJACgAAAAKAAAAAAAKACIAAAAKAAAAAAAKACMAAAAKAAAAAAAKACQAAAAKAAAAAAAKACUAAAAKAAAAAAAKACYAAAAKAAAAAAAKACcAAAAKAAAAAAAKACgAAAAKAAAAAAALACIAAAAKAAAAAAALACMAAAAKAAAAAAALACQAAAAKAAAAAAALACUAAAAKAAAAAAALACYAAAAKAAAAAAALACcAAAAKAAAAAAALACgAAAAKAAAAAAAMACIAAAAKAAAAAAAMACMAAAAKAAEAAAAMACQAAAAKAAAAAAAMACUAAAAKAAAAAAAMACYAAAAKAAAAAAAMACcAAAAKAAAAAAAMACgAAAAKAAAAAAANACIAAAAKAAAAAAANACMAAAAKAAAAAAANACQAAAAKAAAAAAANACUAAAAKAAAAAAANACYAAAAKAAAAAAANACcAAAAKAAAAAAANACgAAAAKAAAAAAAOACIAAAAKAAAAAAAOACMAAAAKAAAAAAAOACQAAAAKAAAAAAAOACUAAAAKAAEAAAAOACYAAAAKAAAAAAAOACcAAAAKAAAAAAAOACgAAAAKAAAAAAAPACIAAAAKAAAAAAAPACMAAAAKAAAAAAAPACQAAAAKAAAAAAAPACUAAAAKAAAAAAAPACYAAAAKAAAAAAAPACcAAAAKAAAAAAAPACgAAAAKAAAAAAAQACIAAAAKAAEAAAAQACMAAAAKAAAAAAAQACQAAAAKAAEAAAAQACUAAAAKAAAAAAAQACYAAAAKAAAAAAAQACcAAAAKAAAAAAAQACgAAAAKAAAAAAARACIAAAAKAAAAAAARACMAAAAKAAAAAAARACQAAAAKAAAAAAARACUAAAAKAAAAAAARACYAAAAKAAAAAAARACcAAAAKAAAAAAARACgAAAAKAAAAAAASACIAAAAKAAAAAAASACMAAAAKAAAAAAASACQAAAAKAAAAAAASACUAAAAKAAAAAAASACYAAAAKAAAAAAASACcAAAAKAAAAAAASACgAAAAKAAAAAAATACIAAAAKAAAAAAATACMAAAAKAAEAAAATACQAAAAKAAAAAAATACUAAAAKAAAAAAATACYAAAAKAAEAAAATACcAAAAKAAAAAAATACgAAAAKAAAAAAAUACIAAAAKAAAAAAAUACMAAAAKAAAAAAAUACQAAAAKAAAAAAAUACUAAAAKAAAAAAAUACYAAAAKAAAAAAAUACcAAAAKAAAAAAAUACgAAAAKAAAAAAAVACIAAAAKAAAAAAAVACMAAAAKAAAAAAAVACQAAAAKAAAAAAAVACUAAAAKAAAAAAAVACYAAAAKAAAAAAAVACcAAAAKAAAAAAAVACgAAAAKAAAAAAAWACIAAAAKAAAAAAAWACMAAAAKAAAAAAAWACQAAAAKAAAAAAAWACUAAAAKAAAAAAAWACYAAAAKAAAAAAAWACcAAAAKAAEAAAAWACgAAAAKAAAAAAAXACIAAAAKAAAAAAAXACMAAAAKAAAAAAAXACQAAAAKAAAAAAAXACUAAAAKAAAAAAAXACYAAAAKAAAAAAAXACcAAAAKAAAAAAAXACgAAAAKAAAAAAAYACIAAAAKAAEAAAAYACMAAAAKAAEAAAAYACQAAAAKAAAAAAAYACUAAAAKAAAAAAAYACYAAAAKAAAAAAAYACcAAAAKAAAAAAAYACgAAAAKAAAAAAAZACIAAAAKAAEAAAAZACMAAAAKAAAAAAAZACQAAAAKAAAAAAAZACUAAAAKAAEAAAAZACYAAAAKAAAAAAAZACcAAAAKAAAAAAAZACgAAAAKAAAAAAAaACIAAAAKAAAAAAAaACMAAAAKAAAAAAAaACQAAAAKAAAAAAAaACUAAAAKAAAAAAAaACYAAAAKAAAAAAAaACcAAAAKAAAAAAAaACgAAAAKAAAAAAAbACIAAAAKAAAAAAAbACMAAAAKAAAAAAAbACQAAAAKAAAAAAAbACUAAAAKAAAAAAAbACYAAAAKAAAAAAAbACcAAAAKAAAAAAAbACgAAAAKAAAAAAAcACIAAAAKAAAAAAAcACMAAAAKAAAAAAAcACQAAAAKAAAAAAAcACUAAAAKAAAAAAAcACYAAAAKAAAAAAAcACcAAAAKAAAAAAAcACgAAAAKAAAAAAAdACIAAAAKAAAAAAAdACMAAAAKAAAAAAAdACQAAAAKAAAAAAAdACUAAAAKAAAAAAAdACYAAAAKAAAAAAAdACcAAAAKAAAAAAAdACgAAAAKAAAAAAAeACIAAAAKAAAAAAAeACMAAAAKAAAAAAAeACQAAAAKAAAAAAAeACUAAAAKAAAAAAAeACYAAAAKAAAAAAAeACcAAAAKAAAAAAAeACgAAAAKAAAAAAAfACIAAAAKAAAAAAAfACMAAAAKAAAAAAAfACQAAAAKAAAAAAAfACUAAAAKAAAAAAAfACYAAAAKAAAAAAAfACcAAAAKAAAAAAAfACgAAAAKAAAAAAAgACIAAAAKAAAAAAAgACMAAAAKAAAAAAAgACQAAAAKAAAAAAAgACUAAAAKAAAAAAAgACYAAAAKAAAAAAAgACcAAAAKAAAAAAAgACgAAAAKAAAAAAAhACIAAAAKAAAAAAAhACMAAAAKAAAAAAAhACQAAAAKAAAAAAAhACUAAAAKAAAAAAAhACYAAAAKAAAAAAAhACcAAAAKAAAAAAAhACgAAAAKAAAAAAAiACIAAAAKAAAAAAAiACMAAAAKAAAAAAAiACQAAAAKAAAAAAAiACUAAAAKAAAAAAAiACYAAAAKAAAAAAAiACcAAAAKAAAAAAAiACgAAAAKAAAAAAAjACIAAAAKAAAAAAAjACMAAAAKAAAAAAAjACQAAAAKAAAAAAAjACUAAAAKAAAAAAAjACYAAAAKAAAAAAAjACcAAAAKAAAAAAAjACgAAAAKAAAAAAAkACIAAAAKAAAAAAAkACMAAAAKAAAAAAAkACQAAAAKAAAAAAAkACUAAAAKAAAAAAAkACYAAAAKAAAAAAAkACcAAAAKAAAAAAAkACgAAAAKAAAAAAAlACIAAAAKAAAAAAAlACMAAAAKAAAAAAAlACQAAAAKAAAAAAAlACUAAAAKAAAAAAAlACYAAAAKAAAAAAAlACcAAAAKAAAAAAAlACgAAAAKAAAAAAAmACIAAAAKAAAAAAAmACMAAAAKAAAAAAAmACQAAAAKAAAAAAAmACUAAAAKAAAAAAAmACYAAAAKAAAAAAAmACcAAAAKAAAAAAAmACgAAAAKAAAAAAAnACIAAAAKAAAAAAAnACMAAAAKAAAAAAAnACQAAAAKAAAAAAAnACUAAAAKAAAAAAAnACYAAAAKAAAAAAAnACcAAAAKAAAAAAAnACgAAAAKAAAAAAAoACIAAAAKAAAAAAAoACMAAAAKAAAAAAAoACQAAAAKAAAAAAAoACUAAAAKAAAAAAAoACYAAAAKAAAAAAAoACcAAAAKAAAAAAAoACgAAAAKAAAAAAApACIAAAALAAIAAAApACMAAAAKAAAAAAApACQAAAAKAAAAAAApACUAAAAKAAEAAAApACYAAAAKAAAAAAApACcAAAAKAAAAAAApACgAAAAKAAAAAAAqACIAAAAKAAAAAAAqACMAAAAKAAAAAAAqACQAAAAKAAEAAAAqACUAAAAKAAAAAAAqACYAAAAKAAAAAAAqACcAAAAKAAAAAAAqACgAAAAKAAAAAAArACIAAAAKAAAAAAArACMAAAAKAAAAAAArACQAAAAKAAAAAAArACUAAAAKAAAAAAArACYAAAAKAAAAAAArACcAAAAKAAAAAAArACgAAAAKAAAAAAAsACIAAAAKAAAAAAAsACMAAAALAAAAAAAsACQAAAAKAAAAAAAsACUAAAAKAAAAAAAsACYAAAAKAAAAAAAsACcAAAAKAAAAAAAsACgAAAAKAAAAAAAtACIAAAAKAAAAAAAtACMAAAAKAAAAAAAtACQAAAAKAAAAAAAtACUAAAAKAAEAAAAtACYAAAAKAAAAAAAtACcAAAAKAAAAAAAtACgAAAAKAAAAAAAuACIAAAAKAAAAAAAuACMAAAAKAAEAAAAuACQAAAAKAAAAAAAuACUAAAAKAAAAAAAuACYAAAAKAAAAAAAuACcAAAAKAAAAAAAuACgAAAAKAAAAAAAvACIAAAAKAAAAAAAvACMAAAAKAAAAAAAvACQAAAAKAAAAAAAvACUAAAAKAAAAAAAvACYAAAAKAAAAAAAvACcAAAAKAAAAAAAvACgAAAAKAAAAAAAwACIAAAAKAAAAAAAwACMAAAALAAAAAAAwACQAAAAKAAAAAAAwACUAAAALAAAAAAAwACYAAAAKAAAAAAAwACcAAAAKAAAAAAAwACgAAAAKAAAAAAAxACIAAAAKAAAAAAAxACMAAAAKAAAAAAAxACQAAAAKAAAAAAAxACUAAAAKAAAAAAAxACYAAAAKAAAAAAAxACcAAAAKAAAAAAAxACgAAAAKAAAAAAAyACIAAAAKAAAAAAAyACMAAAAKAAAAAAAyACQAAAAKAAAAAAAyACUAAAAKAAAAAAAyACYAAAAKAAAAAAAyACcAAAAKAAAAAAAyACgAAAAKAAAAAAAzACIAAAAKAAAAAAAzACMAAAAKAAAAAAAzACQAAAAKAAAAAAAzACUAAAAKAAAAAAAzACYAAAAKAAAAAAAzACcAAAAKAAAAAAAzACgAAAAKAAAAAAA0ACIAAAAKAAAAAAA0ACMAAAAKAAAAAAA0ACQAAAAKAAAAAAA0ACUAAAAKAAAAAAA0ACYAAAALAAAAAAA0ACcAAAAKAAAAAAA0ACgAAAAKAAAAAAA1ACIAAAAKAAAAAAA1ACMAAAAKAAAAAAA1ACQAAAAKAAAAAAA1ACUAAAAKAAEAAAA1ACYAAAAKAAAAAAA1ACcAAAAKAAAAAAA1ACgAAAAKAAAAAAA2ACIAAAAKAAEAAAA2ACMAAAAKAAEAAAA2ACQAAAAKAAAAAAA2ACUAAAAKAAAAAAA2ACYAAAAKAAAAAAA2ACcAAAAKAAAAAAA2ACgAAAAKAAAAAAA3ACIAAAAKAAAAAAA3ACMAAAAKAAAAAAA3ACQAAAAKAAAAAAA3ACUAAAAKAAAAAAA3ACYAAAAKAAAAAAA3ACcAAAAKAAAAAAA4ACIAAAAKAAAAAAA4ACMAAAAKAAAAAAA4ACQAAAAKAAEAAAA4ACUAAAAKAAAAAAA4ACYAAAAKAAAAAAA4ACcAAAAKAAAAAAA5ACIAAAAKAAAAAAA5ACMAAAAKAAAAAAA5ACQAAAALAAAAAAA5ACUAAAAKAAAAAAA5ACYAAAAKAAAAAAA5ACcAAAAKAAAAAAA6ACIAAAAKAAAAAAA6ACMAAAAKAAAAAAA6ACQAAAAKAAAAAAA6ACUAAAAKAAAAAAA6ACYAAAAKAAAAAAA6ACcAAAAKAAAAAAA7ACIAAAAKAAAAAAA7ACMAAAAKAAAAAAA7ACQAAAAKAAAAAAA7ACUAAAAKAAAAAAA7ACYAAAAKAAAAAAA7ACcAAAAKAAAAAAA8ACIAAAAKAAEAAAA8ACMAAAAKAAAAAAA8ACQAAAAKAAAAAAA8ACUAAAAKAAAAAAA8ACYAAAALAAAAAAA8ACcAAAAKAAAAAAA9ACIAAAAKAAAAAAA9ACMAAAAKAAAAAAA9ACQAAAAKAAAAAAA9ACUAAAAKAAAAAAA9ACYAAAAKAAAAAAA9ACcAAAAKAAAAAAA+ACIAAAAKAAAAAAA+ACMAAAAKAAAAAAA+ACQAAAAKAAAAAAA+ACUAAAAKAAAAAAA+ACYAAAAKAAAAAAA+ACcAAAAKAAAAAAA/ACIAAAAKAAEAAAA/ACMAAAAKAAEAAAA/ACQAAAAKAAAAAAA/ACUAAAALAAAAAAA/ACYAAAAKAAAAAAA/ACcAAAAKAAAAAABAACIAAAAKAAEAAABAACMAAAAKAAEAAABAACQAAAAKAAEAAABAACUAAAAKAAAAAABAACYAAAAKAAAAAABAACcAAAAKAAAAAABBACIAAAAKAAAAAABBACMAAAAKAAAAAABBACQAAAAKAAAAAABBACUAAAAKAAAAAABBACYAAAAKAAAAAABCACIAAAAKAAAAAABCACMAAAALAAAAAABCACQAAAAKAAAAAABCACUAAAAKAAAAAABCACYAAAAKAAAAAABDACIAAAAKAAEAAABDACMAAAAKAAAAAABDACQAAAAKAAAAAABDACUAAAAKAAAAAABEACIAAAAKAAEAAABEACMAAAAKAAAAAABEACQAAAAKAAAAAABFACIAAAAKAAAAAABFACMAAAAKAAAAAABFACQAAAAKAAAAAAAMABQAAAAFAAAAAAANABUAAAAFAAAAAAARABcAAAAFAAAAAAAVABoAAAADAAAAAAAZABkAAAACAAAAAAAfABkAAAADAAAAAAAmABkAAAAEAAAAAAAqABcAAAACAAAAAAA4ABgAAAAEAAAAAABAABUAAAACAAAAAABBABcAAAAEAAIAAABFABkAAAAEAAEAAAA/ABYAAAADAAAAAABAABcAAAADAAEAAABEABYAAAADAAAAAABHABcAAAAFAAAAAABFABcAAAADAAAAAAA5ABgAAAADAAAAAAA6ABgAAAAEAAAAAAA7ABgAAAADAAAAAAA0ABgAAAACAAAAAAA1ABgAAAADAAAAAAA2ABgAAAAEAAAAAAA3ABgAAAADAAAAAAA8ABgAAAADAAAAAAA9ABgAAAAEAAAAAAA+ABgAAAADAAEAAAA/ABcAAAADAAEAAAA/ABgAAAAFAAEAAAA+ABcAAAACAAAAAABBABUAAAADAAAAAABCABUAAAADAAAAAABDABUAAAAFAAAAAABGABcAAAAEAAAAAAAgABkAAAAEAAAAAAAhABkAAAADAAAAAAAiABkAAAAEAAAAAAAjABkAAAADAAAAAAAkABkAAAAEAAAAAAAlABkAAAADAAAAAAArABcAAAADAAAAAAAsABcAAAAEAAAAAAAtABcAAAADAAAAAAAuABcAAAAEAAAAAAAvABcAAAADAAAAAAAwABcAAAAEAAAAAAApABgAAAAEAAAAAAAqABgAAAAFAAEAAAAaABkAAAADAAAAAAAbABkAAAAEAAAAAAAcABkAAAADAAAAAAAdABkAAAADAAAAAAAeABkAAAAEAAAAAAATABoAAAACAAAAAAAUABoAAAAEAAAAAAAWABoAAAADAAAAAAAXABoAAAAEAAAAAAAPABcAAAADAAAAAAAQABcAAAAEAAAAAAAKABQAAAADAAAAAAALABQAAAAEAAAAAAAIABQAAAADAAAAAAAJABQAAAAEAAAAAAAGABQAAAADAAAAAAAHABQAAAAEAAAAAAAEABQAAAAEAAAAAAAFABQAAAAEAAAAAAABABQAAAADAAAAAAACABQAAAAEAAAAAAADABQAAAADAAAAAAAAABQAAAACAAAAAAAOABYAAAAFAAAAAAAYABoAAAAFAAAAAAAnABkAAAAFAAAAAAAyABcAAAAEAAAAAAAxABcAAAAEAAAAAAAoABgAAAACAAAAAAAzABcAAAAFAAAAAAARABgAAAAFAAEAAAARABkAAAAFAAEAAAASABkAAAADAAEAAAASABgAAAAFAAAAAAAQABgAAAAFAAEAAAAAABsAAAAEAAEAAAABABsAAAAEAAEAAAACABsAAAAEAAEAAAADABsAAAAEAAEAAAAEABsAAAAEAAIAAAAFABsAAAAEAAEAAAAGABsAAAAEAAEAAAAHABsAAAAEAAEAAAAIABsAAAAEAAEAAAAJABsAAAAEAAEAAAAKABsAAAAEAAEAAAALABsAAAAEAAIAAAAMABsAAAAEAAEAAAANABsAAAAEAAEAAAAOABsAAAAEAAEAAAAPABsAAAAEAAEAAAAQABsAAAAEAAEAAAARABsAAAAEAAEAAAASABsAAAAEAAEAAAATABsAAAAEAAEAAAAUABsAAAAEAAEAAAAVABsAAAAEAAEAAAAWABsAAAAEAAEAAAAXABsAAAAEAAEAAAAYABsAAAAEAAEAAAAZABsAAAAEAAEAAAAaABsAAAAFAAEAAAAbABsAAAAEAAEAAAAcABsAAAAEAAEAAAAdABsAAAAEAAEAAAAeABsAAAAEAAEAAAAfABsAAAAEAAEAAAAgABsAAAAEAAEAAAAhABsAAAAEAAEAAAAiABsAAAAEAAEAAAAjABsAAAAEAAEAAAAkABsAAAAEAAEAAAAlABsAAAAEAAEAAAAmABsAAAAEAAEAAAAnABsAAAAEAAEAAAAoABsAAAAEAAEAAAApABsAAAAEAAEAAAAqABsAAAAEAAEAAAArABsAAAAEAAEAAAAsABsAAAAEAAEAAAAtABsAAAAEAAEAAAAuABsAAAAIAAUAAAAvABsAAAAEAAEAAAAwABsAAAAEAAEAAAAxABsAAAAEAAEAAAAyABsAAAAEAAEAAAAzABsAAAAEAAEAAAA0ABsAAAAEAAEAAAA1ABsAAAAEAAEAAAA2ABsAAAAEAAEAAAA3ABsAAAAEAAEAAAA4ABsAAAAEAAEAAAA5ABsAAAAEAAEAAAA6ABsAAAAEAAEAAAA7ABsAAAAEAAEAAAA8ABsAAAAEAAEAAAA9ABsAAAAEAAEAAAA+ABsAAAAJAAUAAAA/ABsAAAAEAAEAAABAABsAAAAEAAEAAABBABsAAAAEAAEAAABCABsAAAAEAAEAAABDABsAAAAEAAEAAABEABsAAAAEAAEAAABFABsAAAAEAAEAAABGABsAAAAEAAEAAABHABsAAAAEAAEAAAA/ACEAAAAKAAAAAABCACEAAAAKAAAAAABDAB8AAAAEAAEAAABHACAAAAAKAAAAAABGACEAAAALAAEAAAA6ACAAAAAKAAEAAAA4ACEAAAAKAAEAAAAzACAAAAAKAAAAAAAwACEAAAAKAAEAAAAtACAAAAAKAAAAAAArACAAAAAKAAAAAAApACEAAAALAAEAAAAqACEAAAALAAAAAAAmACEAAAALAAAAAAAnACEAAAALAAEAAAAjACAAAAAKAAAAAAAgACAAAAALAAEAAAAbACEAAAAKAAEAAAAZACEAAAALAAEAAAAPAB8AAAAEAAEAAAANACEAAAAKAAEAAAAKACEAAAAKAAEAAAAGACEAAAALAAAAAAACACEAAAAKAAAAAAAEACAAAAALAAEAAAAIACAAAAALAAAAAAAIACEAAAAKAAEAAAANAB8AAAAKAAEAAAATACAAAAALAAAAAAAVACAAAAAKAAEAAAAWACAAAAAKAAAAAAAYACEAAAALAAEAAAAcACAAAAALAAEAAAAfACEAAAAKAAEAAAAvACEAAAALAAEAAAA2ACAAAAALAAAAAAA0ACEAAAALAAAAAAA9ACEAAAALAAAAAABAAB8AAAAEAAIAAABDACEAAAAKAAAAAABEACEAAAAKAAEAAAA9AB8AAAAKAAEAAAA7ACEAAAALAAEAAAAzACEAAAALAAAAAAArACEAAAALAAAAAAAoACAAAAAKAAAAAAAXACAAAAALAAEAAAAWACEAAAAKAAEAAAALACAAAAAKAAEAAAATACEAAAAKAAAAAAAPACAAAAALAAEAAAANACAAAAAKAAEAAAA+ACEAAAAKAAAAAAA+AB8AAAALAAEAAAA8AB8AAAALAAAAAAA6AB8AAAAEAAEAAAAAACAAAAALAAAAAAAAACEAAAAKAAAAAAABACAAAAALAAEAAAABACEAAAALAAEAAAACACAAAAAKAAAAAAADACAAAAAKAAAAAAADACEAAAALAAAAAAAEACEAAAAKAAEAAAAFACAAAAALAAEAAAAFACEAAAAKAAAAAAAGACAAAAALAAEAAAAHACAAAAALAAAAAAAHACEAAAAKAAAAAAAJACAAAAAKAAEAAAAJACEAAAAKAAAAAAAKACAAAAAKAAAAAAALACEAAAALAAAAAAAMACAAAAAKAAEAAAAMACEAAAAKAAAAAAAOACAAAAALAAEAAAAOACEAAAALAAEAAAAPACEAAAALAAEAAAAQACAAAAALAAAAAAAQACEAAAAKAAEAAAARACAAAAAKAAEAAAARACEAAAAKAAEAAAASACAAAAAKAAEAAAASACEAAAAKAAAAAAAUACAAAAAKAAEAAAAUACEAAAALAAAAAAAVACEAAAAKAAAAAAAXACEAAAAKAAEAAAAYACAAAAALAAEAAAAZACAAAAAKAAEAAAAaACAAAAAKAAAAAAAaACEAAAALAAAAAAAbACAAAAAKAAEAAAAcACEAAAALAAEAAAAdACAAAAAKAAEAAAAdACEAAAALAAEAAAAeACAAAAAKAAAAAAAeACEAAAALAAAAAAAfACAAAAAKAAAAAAAgACEAAAAKAAAAAAAhACAAAAALAAAAAAAhACEAAAAKAAEAAAAiACAAAAALAAAAAAAiACEAAAAKAAAAAAAjACEAAAALAAEAAAAkACAAAAAKAAAAAAAkACEAAAALAAAAAAAlACAAAAALAAEAAAAlACEAAAALAAAAAAAmACAAAAALAAAAAAAnACAAAAAKAAEAAAAoACEAAAAKAAAAAAApACAAAAAKAAEAAAAqACAAAAAKAAEAAAAsACAAAAALAAAAAAAsACEAAAALAAAAAAAtACEAAAAKAAAAAAAuACAAAAALAAEAAAAuACEAAAALAAEAAAAvACAAAAALAAEAAAAwACAAAAAKAAAAAAAxACAAAAALAAAAAAAxACEAAAALAAAAAAAyACAAAAAKAAEAAAAyACEAAAALAAAAAAA0ACAAAAALAAAAAAA1ACAAAAALAAAAAAA1ACEAAAAKAAAAAAA2ACEAAAAKAAEAAAA3ACAAAAALAAEAAAA3ACEAAAALAAAAAAA4ACAAAAALAAEAAAA5ACAAAAAKAAEAAAA5ACEAAAAKAAEAAAA6ACEAAAAKAAEAAAA7ACAAAAAKAAEAAAA8ACAAAAAKAAAAAAA8ACEAAAALAAEAAAA9ACAAAAAKAAEAAAA+ACAAAAALAAAAAAA/ACAAAAAKAAAAAABAACAAAAAKAAAAAABAACEAAAALAAAAAABBACAAAAAKAAAAAABBACEAAAAKAAEAAABCACAAAAALAAAAAABDACAAAAAKAAAAAABEACAAAAAKAAEAAABFACAAAAAKAAEAAABFACEAAAAKAAAAAABGACAAAAALAAEAAABHACEAAAAKAAAAAAAAAB8AAAALAAAAAAABAB8AAAALAAEAAAACAB8AAAAEAAIAAAADAB8AAAALAAEAAAAEAB8AAAALAAAAAAAFAB8AAAAEAAEAAAAGAB8AAAAKAAEAAAAHAB8AAAALAAEAAAAIAB8AAAALAAEAAAAJAB8AAAALAAAAAAAKAB8AAAAKAAEAAAALAB8AAAALAAEAAAAMAB8AAAALAAAAAAAOAB8AAAAEAAEAAAAQAB8AAAALAAAAAAARAB8AAAAEAAEAAAASAB8AAAALAAEAAAATAB8AAAAEAAEAAAAUAB8AAAAEAAIAAAAVAB8AAAALAAAAAAAWAB8AAAAKAAEAAAAXAB8AAAALAAAAAAAYAB8AAAALAAAAAAAZAB8AAAAKAAEAAAAaAB8AAAALAAEAAAAbAB8AAAALAAEAAAAcAB8AAAAKAAEAAAAdAB8AAAALAAEAAAAeAB8AAAAEAAIAAAAfAB8AAAAEAAEAAAAgAB8AAAAEAAIAAAAhAB8AAAAEAAIAAAAiAB8AAAAEAAIAAAAjAB8AAAAKAAEAAAAkAB8AAAALAAEAAAAlAB8AAAALAAEAAAAmAB8AAAALAAAAAAAnAB8AAAAKAAEAAAAoAB8AAAAEAAIAAAApAB8AAAAEAAEAAAAqAB8AAAAEAAEAAAArAB8AAAALAAAAAAAsAB8AAAAKAAEAAAAtAB8AAAALAAAAAAAuAB8AAAAEAAEAAAAvAB8AAAALAAAAAAAwAB8AAAAEAAEAAAAxAB8AAAAEAAEAAAAyAB8AAAAEAAEAAAAzAB8AAAAEAAEAAAA0AB8AAAAKAAEAAAA1AB8AAAAEAAEAAAA2AB8AAAALAAEAAAA3AB8AAAALAAEAAAA4AB8AAAALAAAAAAA5AB8AAAAEAAIAAAA7AB8AAAAKAAEAAAA/AB8AAAALAAAAAABBAB8AAAALAAEAAABCAB8AAAALAAEAAABEAB8AAAALAAEAAABFAB8AAAALAAAAAABGAB8AAAALAAEAAABHAB8AAAALAAAAAAAAAB4AAAAEAAEAAAABAB4AAAAEAAEAAAACAB4AAAALAAIAAAADAB4AAAAEAAEAAAAEAB4AAAAEAAEAAAAFAB4AAAAEAAIAAAAGAB4AAAALAAIAAAAHAB4AAAALAAIAAAAIAB4AAAAEAAIAAAAJAB4AAAAEAAIAAAAKAB4AAAAEAAEAAAALAB4AAAAEAAIAAAAMAB4AAAAEAAEAAAANAB4AAAAEAAEAAAAOAB4AAAAEAAEAAAAPAB4AAAAEAAIAAAAQAB4AAAAEAAIAAAARAB4AAAAEAAEAAAASAB4AAAALAAIAAAATAB4AAAAEAAIAAAAUAB4AAAAEAAEAAAAVAB4AAAAEAAIAAAAWAB4AAAAEAAEAAAAXAB4AAAALAAIAAAAYAB4AAAALAAIAAAAZAB4AAAALAAIAAAAaAB4AAAAEAAEAAAAbAB4AAAALAAIAAAAcAB4AAAAEAAEAAAAdAB4AAAALAAIAAAAeAB4AAAAEAAEAAAAfAB4AAAALAAIAAAAgAB4AAAAEAAEAAAAhAB4AAAALAAIAAAAiAB4AAAAEAAEAAAAjAB4AAAAEAAEAAAAkAB4AAAAEAAIAAAAlAB4AAAAEAAEAAAAmAB4AAAAEAAIAAAAnAB4AAAAEAAIAAAAoAB4AAAALAAIAAAApAB4AAAAEAAEAAAAqAB4AAAALAAIAAAArAB4AAAALAAIAAAAsAB4AAAAEAAEAAAAtAB4AAAALAAIAAAAuAB4AAAAEAAEAAAAvAB4AAAAEAAEAAAAwAB4AAAALAAIAAAAxAB4AAAALAAIAAAAyAB4AAAAEAAIAAAAzAB4AAAAEAAEAAAA0AB4AAAAEAAEAAAA1AB4AAAAEAAIAAAA2AB4AAAALAAIAAAA3AB4AAAALAAIAAAA4AB4AAAALAAIAAAA5AB4AAAAEAAEAAAA6AB4AAAAEAAEAAAA7AB4AAAAEAAIAAAA8AB4AAAAEAAIAAAA9AB4AAAAEAAEAAAA+AB4AAAALAAIAAAA/AB4AAAAEAAIAAABAAB4AAAAEAAIAAABBAB4AAAAEAAEAAABCAB4AAAAEAAIAAABDAB4AAAAEAAEAAABEAB4AAAAEAAEAAABFAB4AAAAEAAIAAABGAB4AAAALAAIAAABHAB4AAAAEAAIAAAAAABwAAAAEAAEAAAAAAB0AAAAJAAUAAAABABwAAAAJAAUAAAABAB0AAAAEAAIAAAACABwAAAAEAAEAAAACAB0AAAAJAAUAAAADABwAAAAEAAIAAAAEABwAAAAEAAEAAAAEAB0AAAAJAAUAAAAGABwAAAAEAAIAAAAHABwAAAAEAAEAAAAIABwAAAAEAAEAAAAJABwAAAAEAAEAAAAJAB0AAAAEAAIAAAAKABwAAAAEAAEAAAAKAB0AAAAEAAIAAAAMABwAAAAEAAIAAAANABwAAAAEAAEAAAANAB0AAAAEAAIAAAAOABwAAAAJAAUAAAAOAB0AAAAJAAUAAAAPAB0AAAAEAAEAAAAQABwAAAAEAAIAAAAQAB0AAAAJAAUAAAARAB0AAAAEAAEAAAASABwAAAAEAAEAAAASAB0AAAAEAAIAAAATABwAAAAEAAIAAAATAB0AAAAJAAUAAAAVAB0AAAAJAAUAAAAWAB0AAAAEAAEAAAAXABwAAAAEAAEAAAAYABwAAAAJAAUAAAAYAB0AAAAJAAUAAAAZABwAAAAEAAEAAAAZAB0AAAAEAAIAAAAaABwAAAAEAAIAAAAbAB0AAAAJAAUAAAAcAB0AAAAJAAUAAAAdABwAAAAEAAIAAAAdAB0AAAAEAAEAAAAeABwAAAAEAAIAAAAeAB0AAAAEAAIAAAAfABwAAAAJAAUAAAAfAB0AAAAEAAEAAAAgAB0AAAAEAAIAAAAhABwAAAAJAAUAAAAhAB0AAAAEAAEAAAAiABwAAAAEAAIAAAAiAB0AAAAJAAUAAAAjABwAAAAEAAIAAAAjAB0AAAAJAAUAAAAkAB0AAAAEAAIAAAAlABwAAAAEAAEAAAAlAB0AAAAJAAUAAAAmABwAAAAEAAIAAAAmAB0AAAAEAAEAAAAnABwAAAAEAAEAAAAnAB0AAAAJAAUAAAAoABwAAAAEAAIAAAApABwAAAAJAAUAAAAqABwAAAAJAAUAAAArABwAAAAEAAEAAAAsABwAAAAJAAUAAAAsAB0AAAAEAAEAAAAtAB0AAAAJAAUAAAAuAB0AAAAEAAIAAAAvABwAAAAEAAIAAAAwAB0AAAAJAAUAAAAxABwAAAAEAAIAAAAxAB0AAAAJAAUAAAAyABwAAAAEAAEAAAAyAB0AAAAJAAUAAAAzAB0AAAAEAAEAAAA2ABwAAAAEAAEAAAA3ABwAAAAEAAEAAAA3AB0AAAAEAAIAAAA5ABwAAAAEAAEAAAA5AB0AAAAEAAIAAAA6ABwAAAAEAAEAAAA6AB0AAAAEAAEAAAA7AB0AAAAJAAUAAAA8AB0AAAAJAAUAAAA9ABwAAAAEAAEAAAA+AB0AAAAEAAEAAABAABwAAAAJAAUAAABBAB0AAAAEAAEAAABCABwAAAAEAAIAAABCAB0AAAAEAAEAAABEAB0AAAAEAAEAAABFABwAAAAJAAUAAABFAB0AAAAEAAEAAABHABwAAAAJAAUAAABHAB0AAAAJAAUAAAAGAB0AAAAEAAEAAAAFABwAAAAIAAUAAAAHAB0AAAAIAAUAAAAIAB0AAAAIAAUAAAAMAB0AAAAIAAUAAAAUABwAAAAIAAUAAAAUAB0AAAAIAAUAAAAVABwAAAAEAAEAAAAWABwAAAAIAAUAAAAcABwAAAAIAAUAAAAqAB0AAAAIAAUAAAApAB0AAAAIAAUAAAAoAB0AAAAEAAEAAAArAB0AAAAIAAUAAAA0ABwAAAAEAAEAAAAzABwAAAAIAAUAAAA0AB0AAAAIAAUAAAA2AB0AAAAIAAUAAABAAB0AAAAEAAIAAAA/AB0AAAAIAAUAAAA/ABwAAAAIAAUAAAA+ABwAAAAIAAUAAABDABwAAAAIAAUAAABDAB0AAAAEAAIAAABGABwAAAAEAAIAAAAaAB0AAAAIAAUAAAALABwAAAAJAAUAAAALAB0AAAAJAAUAAAAkABwAAAAEAAEAAAADAB0AAAAEAAIAAAAFAB0AAAAJAAUAAAARABwAAAAEAAEAAAAPABwAAAAEAAEAAAAXAB0AAAAJAAUAAAAgABwAAAAJAAUAAAAbABwAAAAEAAEAAAAuABwAAAAJAAUAAAAtABwAAAAEAAIAAAAvAB0AAAAEAAIAAAAwABwAAAAEAAIAAAA1AB0AAAAJAAUAAAA4AB0AAAAEAAEAAAA1ABwAAAAIAAUAAAA4ABwAAAAEAAIAAAA8ABwAAAAIAAUAAAA9AB0AAAAEAAIAAAA7ABwAAAAEAAEAAABGAB0AAAAJAAUAAABEABwAAAAEAAIAAABBABwAAAAIAAUAAAAIABgAAAAEAAEAAAAIABcAAAAEAAIAAAAIABYAAAADAAEAAAAIABUAAAADAAEAAAAHABUAAAACAAEAAAAGABUAAAACAAEAAAAFABUAAAAEAAEAAAAEABUAAAACAAEAAAADABUAAAAEAAEAAAACABUAAAAEAAEAAAABABUAAAADAAEAAAAAABUAAAADAAEAAAAAABYAAAAEAAEAAAAAABcAAAAEAAEAAAAAABgAAAAEAAIAAAAAABkAAAAEAAIAAAAAABoAAAAEAAEAAAABABoAAAAEAAIAAAABABkAAAAEAAIAAAABABgAAAAEAAEAAAABABcAAAAEAAIAAAABABYAAAAFAAEAAAACABYAAAADAAEAAAACABcAAAAEAAEAAAACABgAAAAEAAEAAAACABkAAAAIAAUAAAACABoAAAAEAAIAAAADABoAAAAEAAEAAAADABkAAAAEAAIAAAADABgAAAAEAAEAAAADABcAAAAEAAIAAAADABYAAAAFAAEAAAAEABYAAAAEAAEAAAAEABcAAAAEAAEAAAAEABgAAAAEAAEAAAAEABkAAAAEAAIAAAAEABoAAAAEAAIAAAAFABoAAAAEAAEAAAAFABkAAAAIAAUAAAAFABgAAAAEAAEAAAAFABcAAAAEAAIAAAAFABYAAAADAAEAAAAGABYAAAAEAAIAAAAGABcAAAAEAAIAAAAGABgAAAAEAAEAAAAGABkAAAAEAAEAAAAGABoAAAAEAAIAAAAHABoAAAAEAAEAAAAHABkAAAAEAAEAAAAHABgAAAAEAAIAAAAHABcAAAAEAAIAAAAHABYAAAAEAAEAAAAIABkAAAAEAAEAAAAIABoAAAAEAAEAAAAJABoAAAAEAAEAAAAJABkAAAAEAAIAAAAJABgAAAAEAAEAAAAJABcAAAAEAAEAAAAJABYAAAAFAAEAAAAJABUAAAAEAAEAAAAKABUAAAADAAEAAAAKABYAAAAEAAEAAAAKABcAAAAEAAIAAAAKABgAAAAEAAIAAAAKABkAAAAEAAIAAAAKABoAAAAEAAEAAAALABoAAAAEAAIAAAALABkAAAAEAAEAAAALABgAAAAEAAIAAAALABcAAAAEAAEAAAALABYAAAACAAEAAAALABUAAAAEAAEAAAAMABUAAAACAAEAAAAMABYAAAACAAEAAAAMABcAAAAFAAEAAAAMABgAAAAEAAEAAAAMABkAAAAEAAEAAAAMABoAAAAIAAUAAAANABoAAAAEAAEAAAANABkAAAAEAAEAAAANABgAAAAEAAIAAAANABcAAAACAAEAAAANABYAAAAEAAEAAAAOABcAAAADAAEAAAAOABgAAAADAAEAAAAOABkAAAADAAEAAAAOABoAAAAEAAIAAAAPABoAAAAEAAEAAAAPABkAAAAEAAEAAAAPABgAAAAEAAIAAAAQABkAAAAEAAEAAAAQABoAAAADAAEAAAARABoAAAAEAAEAAAASABoAAAACAAEAAAAiABoAAAAEAAEAAAAhABoAAAAEAAIAAAAgABoAAAAEAAEAAAAfABoAAAAEAAIAAAAeABoAAAAEAAEAAAAdABoAAAAEAAIAAAAcABoAAAAEAAIAAAAbABoAAAAEAAEAAAAaABoAAAAFAAEAAAAZABoAAAADAAEAAAAjABoAAAAEAAEAAAAkABoAAAAEAAEAAAAlABoAAAAEAAEAAAAmABoAAAAEAAIAAAAnABoAAAAEAAEAAAAoABoAAAAEAAIAAAAoABkAAAAEAAEAAAApABkAAAACAAEAAAApABoAAAAEAAIAAAAqABoAAAAEAAIAAAAqABkAAAAEAAIAAAArABkAAAADAAEAAAArABgAAAAEAAEAAAAsABgAAAACAAEAAAAsABkAAAACAAEAAAAsABoAAAAEAAIAAAArABoAAAAEAAIAAAAtABoAAAAEAAEAAAAtABkAAAAEAAIAAAAtABgAAAAFAAEAAAAuABgAAAAEAAEAAAAuABkAAAAEAAIAAAAuABoAAAAEAAIAAAAvABoAAAAEAAEAAAAvABkAAAAEAAEAAAAvABgAAAACAAEAAAAwABgAAAAEAAEAAAAwABkAAAAEAAIAAAAwABoAAAAEAAIAAAAxABoAAAAEAAIAAAAxABkAAAAEAAEAAAAxABgAAAAFAAEAAAAyABgAAAAFAAEAAAAyABkAAAAEAAIAAAAyABoAAAAEAAIAAAAzABoAAAAEAAEAAAAzABkAAAACAAEAAAAzABgAAAAEAAEAAAA0ABkAAAAEAAIAAAA0ABoAAAAEAAIAAAA1ABoAAAAEAAEAAAA1ABkAAAAEAAEAAAA2ABkAAAADAAEAAAA2ABoAAAAEAAIAAAA3ABoAAAACAAEAAAA3ABkAAAADAAEAAAA4ABkAAAAEAAIAAAA4ABoAAAAEAAEAAAA5ABoAAAAFAAEAAAA5ABkAAAAEAAEAAAA6ABkAAAAEAAEAAAA6ABoAAAAEAAEAAAA7ABoAAAAEAAIAAAA7ABkAAAADAAEAAAA8ABkAAAAEAAEAAAA8ABoAAAAEAAEAAAA9ABoAAAAEAAIAAAA9ABkAAAAEAAEAAAA+ABkAAAAEAAEAAAA+ABoAAAAEAAEAAAA/ABoAAAAEAAIAAAA/ABkAAAAEAAEAAABAABkAAAAEAAEAAABAABgAAAAEAAEAAABBABgAAAAEAAIAAABBABkAAAAEAAEAAABBABoAAAAEAAEAAABAABoAAAAIAAUAAABCABoAAAAEAAIAAABCABkAAAAEAAIAAABCABgAAAAEAAEAAABCABcAAAAEAAEAAABCABYAAAADAAEAAABBABYAAAAFAAEAAABAABYAAAAEAAIAAABDABYAAAAEAAEAAABDABcAAAADAAEAAABDABgAAAAJAAUAAABDABkAAAAEAAIAAABDABoAAAAEAAEAAABEABoAAAAEAAEAAABEABkAAAAEAAIAAABEABgAAAACAAEAAABEABcAAAAEAAIAAABFABgAAAAEAAEAAABGABgAAAACAAEAAABGABkAAAACAAEAAABGABoAAAAEAAEAAABFABoAAAAIAAUAAABHABoAAAAEAAEAAABHABkAAAAEAAIAAABHABgAAAAEAAEAAAA=")
tile_set = ExtResource("2_xoimn")

[node name="MenuBackGroundDarkener" type="CanvasModulate" parent="."]
visible = false
position = Vector2(1, -1)
color = Color(0.858824, 0.686275, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2.4, 2.4)
sprite_frames = SubResource("SpriteFrames_yeh68")
frame_progress = 0.347214

[node name="Title" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_c1yts")
layout_mode = 0
offset_left = 384.0
offset_top = 60.0
offset_right = 768.0
offset_bottom = 196.0
theme_override_fonts/font = ExtResource("5_yeh68")
theme_override_font_sizes/font_size = 90
text = "GremEx"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 99

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -48.0
offset_right = 72.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Start" type="Button" parent="ButtonContainer"]
material = SubResource("CanvasItemMaterial_wuyya")
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8op64")
theme_override_font_sizes/font_size = 27
text = "Start Game"

[node name="Settings" type="Button" parent="ButtonContainer"]
light_mask = 2
material = SubResource("CanvasItemMaterial_6lnei")
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8op64")
theme_override_font_sizes/font_size = 27
text = "Settings"

[node name="Quit" type="Button" parent="ButtonContainer"]
light_mask = 2
material = SubResource("CanvasItemMaterial_6lnei")
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_8op64")
theme_override_font_sizes/font_size = 27
text = "Quit"

[node name="SettingsScreen" parent="." instance=ExtResource("4_8op64")]
visible = false
layout_mode = 2
anchors_preset = 0

[node name="InputSettingsScreen" parent="." instance=ExtResource("5_5glds")]
visible = false
layout_mode = 2
anchors_preset = 0

[connection signal="pressed" from="ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ButtonContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonContainer/Quit" to="." method="_on_quit_pressed"]
